# pivic-pso

./: README.md  experiments.py  pyproject.toml
configs/: benchmarks.py  hyperparameters.py
results/: benchmarks_1000dim_results.pkl  benchmarks_1000dim_results_summary.csv  benchmarks_100dim_results.pkl  benchmarks_100dim_results_summary.csv  benchmarks_30dim_results.pkl  benchmarks_30dim_results_summary.csv  benchmarks_500dim_results.pkl  benchmarks_500dim_results_summary.csv  benchmarks_50dim_results.pkl  benchmarks_50dim_results_summary.csv  benchmarks_results.pkl
scripts/: generate_plots.py  process_data.py  run_experiments.py
src/: functions.py  plot_results.py  plotter.py  process_data.py  pso.py
