[project]
name = "pivic-pso"
version = "0.1.0"
description = "Repositório dedicado à pesquisa de pivic sobre o PSO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e>=1.4.5",
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.13",
]
